--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- tailwindcss -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- fontawesome -->
+    <script src="https://kit.fontawesome.com/7b39153ed3.js" crossorigin="anonymous"></script>
     <title>AirClone</title>
   </head>
   <body>
