--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://kit.fontawesome.com/a5df376e05.js" crossorigin="anonymous"></script>
+
   </body>
 </html>
